pom更改+初始化脚本+上传代码注释